--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,26 +1,28 @@
 @import "tailwindcss";
 
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
+.bgImage{
+  background-blend-mode: multiply;
+  background-color: rgba(0, 0, 0, 0.3);
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
 }
 
-@theme inline {
-  --color-background: var(--background);
-  --color-foreground: var(--foreground);
-  --font-sans: var(--font-geist-sans);
-  --font-mono: var(--font-geist-mono);
+html::-webkit-scrollbar{
+  width: 0px;
 }
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
+.scroll::-webkit-scrollbar{
+  height:0px;
+  background-color: rgb(238, 110, 25);
+  border-radius: 10px;
 }
-
-body {
-  background: var(--background);
-  color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
+.scroll::-webkit-scrollbar-thumb{
+  background-color: rgb(253, 146, 75);
+  border-radius: 10px;
+}
+.scroll_y::-webkit-scrollbar{
+  height:0px;
+  width: 0px;
+  background-color: rgb(238, 110, 25);
+  /* border-radius: 10px; */
 }
